--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1472,6 +1472,27 @@ input, select, textarea {
 			line-height: 1.5em;
 		}
 
+	header.namecredits {
+		text-align: left;
+
+	}
+		header.namecredits h2 {
+			font-weight: 700;
+			font-size: 2em;
+			letter-spacing: 0.075em;
+			line-height: 1.5em;
+			padding: 0.5em 0 0 0;
+		}
+
+		header.namecredits ul {
+			list-style-type: circle;
+			color: #313337;
+			display: block;
+			margin: 1.15em 0 0 0;
+			font-size: 1.5em;
+			letter-spacing: 0.075em;
+			line-height: 1.5em;
+		}
 /* Table */
 
 	table {
@@ -1940,6 +1961,20 @@ input, select, textarea {
 		font-weight: 600;
 		letter-spacing: 0.05em;
 	}
+	
+	.box p.infotext {
+		color: #4f4f4f;
+		font-size: 1em;
+		letter-spacing: 0.05em;
+		text-align: justify;
+	}
+
+	.box p.quote {
+		color: #4f4f4f;
+		font-size: 1em;
+		letter-spacing: 0.05em;
+		text-align: center;
+	}
 
 	.box.post-excerpt .image.left {
 		position: relative;
@@ -2262,9 +2297,13 @@ input, select, textarea {
 
 		#highlights .highlight h3 {
 			color: #e97770;
-			margin: 0 0 0.75em 0;
+			margin: 0 0 0.75em ;
 			font-size: 1.15em;
 			letter-spacing: 0.05em;
+		}
+
+		#highlights .highlight p {
+			height: 200px;
 		}
 
 /* Main */
@@ -2682,7 +2721,6 @@ input, select, textarea {
 					text-decoration: none;
 					font-size: 0.85em;
 					letter-spacing: 0.15em;
-					text-decoration: none;
 					height: 44px;
 					line-height: 44px;
 					border-top: solid 1px rgba(255, 255, 255, 0.05);
